--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@ function showCertificationPassword() {
 
 function checkCertificationPass() {
   var pass = document.getElementById("certPass").value.trim();
-  if (pass === "2025") {
+  if (pass === "ATC") {
     openCertificationLevel1();
   } else {
-    alert(lang === "ar" ? "كلمة المرور خاطئة!" : "Incorrect password!");
+    alert(lang === "ar" ? "كلمة المرور خاطئة!" : "Incorrect password!");               
   }
 }   
 
